tests/NormalTests/paczka1/small_fuzzy/18244737.err
Error in line 2: A148 S344 28,8
Error in line 1: r63a5RJxI A894 80,3
Error in line 10: jXqP0sFx4 S344 30,67
Error in line 9: r63a5RJxI A148 63,7
Error in line 13: nqaPzV A894 62,3
